--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ input[type="password"] {
     border: 1px solid #444;
     border-radius: 5px;
     background-color: #1c1c1c;
-    color: #fff;
+    color: #94929b;
 }
 
 #send-btn {
